--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.6.0",
     "twrnc": "^3.5.0"
   },
   "devDependencies": {
