--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.6.0",
+    "react-native-wavy-background": "^0.2.0",
+    "styled-components": "^5.3.6",
     "twrnc": "^3.5.0"
   },
   "devDependencies": {
