--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "email-validator": "^2.0.4",
     "expo": "~47.0.8",
+    "expo-cli": "^6.0.8",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "react": "18.1.0",
