--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-cli": "^6.0.8",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-heroicons": "^3.2.0",
@@ -23,6 +24,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.6.0",
+    "react-native-timeago": "^0.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-wavy-background": "^0.2.0",
     "styled-components": "^5.3.6",
