--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-scroll-indicator": "^0.1.0",
     "react-native-svg": "^13.6.0",
     "react-native-timeago": "^0.5.0",
     "react-native-vector-icons": "^9.2.0",
