--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.4.1",
