--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-animated-pulse": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pulse": "^1.0.7",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-scroll-indicator": "^0.1.0",
