--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@react-spring/web": "^9.6.1",
     "email-validator": "^2.0.4",
     "expo": "~47.0.8",
     "expo-cli": "^6.0.8",
@@ -18,13 +19,16 @@
     "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.5",
+    "react-native-animated-numbers": "^0.4.1",
     "react-native-animated-pulse": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-modal": "^13.0.1",
     "react-native-pulse": "^1.0.7",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-scroll-indicator": "^0.1.0",
@@ -32,6 +36,7 @@
     "react-native-timeago": "^0.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-wavy-background": "^0.2.0",
+    "react-spring": "^9.6.1",
     "styled-components": "^5.3.6",
     "twrnc": "^3.5.0"
   },
