--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react-native-wavy-background": "^0.2.0",
     "react-spring": "^9.6.1",
     "styled-components": "^5.3.6",
-    "twrnc": "^3.5.0"
+    "twrnc": "^3.5.0",
+    "expo-font": "~11.0.1",
+    "expo-app-loading": "~2.1.1",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
