--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.70.5",
     "react-native-animated-numbers": "^0.4.1",
     "react-native-animated-pulse": "^1.0.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-heroicons": "^3.2.0",
