--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-gifted-charts": "^1.2.42",
     "react-native-heroicons": "^3.2.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-pulse": "^1.0.7",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-scroll-indicator": "^0.1.0",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "^13.8.0",
     "react-native-timeago": "^0.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-wavy-background": "^0.2.0",
