--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "react-native-wavy-background": "^0.2.0",
     "react-spring": "^9.6.1",
     "styled-components": "^5.3.6",
-    "twrnc": "^3.5.0",
-    "use-count-up": "^3.0.1"
+    "twrnc": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
